add archive header title via hook + more improvements

--- a/wp-content/themes/mandrasch-child/style.css
+++ b/wp-content/themes/mandrasch-child/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   My child theme
+ Theme Name:   My child theme (for Eksell)
  Description:  My child theme, currently for eksell theme
  Author:       Matthias Andrasch
  Author URI:   https://mandrasch.dev
